<resources>
    <string name="app_name">South House Utilities</string>
    <string name="add_item_button">Add Monthly Utility Bill</string>
    <string name="money_sign">$</string>

    //hints
    <string name="hint_month_year">Month Year</string>
    <string name="hint_due_date">Due Date</string>
    <string name="hint_amount_due">$Amount Due</string>
    <string name="sign_in">Please sign in with your Google Account</string>
</resources>
